# Projet_ski_alpin

./: Premier-tests-au-propres.ipynb  graphiques_altitude_vitesse_descentes.py  pyproject.toml  test.py  test_shiny.py
dashboard/: app.py
