[tool.poetry]
name = "premier-jeu-de-donnees"
version = "0.1.0"
description = ""
authors = ["Jonas Arondel <jonasarondel@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.2"
numpy = "^1.26.4"
scipy = "^1.13.0"
shiny = "^0.9.0"
wheel = "^0.43.0"
matplotlib = "^3.8.4"
pyqt6 = "^6.7.0"
ipympl = "^0.9.4"
plotly = "^5.22.0"
ipykernel = "^6.29.4"
nbformat = "^5.10.4"
pyproj = "^3.6.1"
dash = "^2.17.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
